[gd_scene load_steps=6 format=2]

[ext_resource path="res://Structures/Structure.gd" type="Script" id=1]
[ext_resource path="res://Structures/highlight_shader.shader" type="Shader" id=3]
[ext_resource path="res://Control/outline_shader.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/Smooth = false
shader_param/line_thickness = 0.0
shader_param/outline_color = Color( 1, 1, 1, 1 )
shader_param/pixel_size = 1

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/highlight_color = Color( 1, 1, 1, 1 )

[node name="Structure" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )

[node name="Highlight" type="Sprite" parent="."]
material = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
disabled = true

[node name="PlacementCollision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlacementCollision"]

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
[connection signal="body_entered" from="PlacementCollision" to="." method="_on_PlacementCollision_body_entered"]
[connection signal="body_exited" from="PlacementCollision" to="." method="_on_PlacementCollision_body_exited"]
[connection signal="input_event" from="InteractArea" to="." method="_on_InteractArea_input_event"]
[connection signal="mouse_entered" from="InteractArea" to="." method="_on_InteractArea_mouse_entered"]
[connection signal="mouse_exited" from="InteractArea" to="." method="_on_InteractArea_mouse_exited"]
